# S4TF

./: CMakeLists.txt  MODULE.bazel  Package.swift  README.md  RELEASE_NOTES.md  WORKSPACE.openxla
Documentation/: Development.md
Sources/CX10/: BUILD  device_wrapper.cc  device_wrapper.h  functional_while.cc  tf_compat.h  xla_tensor_ops_wrapper.cc  xla_tensor_tf_ops.cc  xla_tensor_wrapper.cc  xla_tensor_wrapper.h
Sources/TensorFlow/: Layer.swift  Loss.swift  StdlibExtensions.swift
Sources/TensorFlow/Core/: Runtime.swift  Tensor.swift  Utilities.swift
Sources/TensorFlow/Layers/: Convolutional.swift  Core.swift  Dense.swift  Dropout.swift  Embedding.swift  Normalization.swift  Pooling.swift  Recurrent.swift  Sequential.swift  Upsampling.swift
Sources/TensorFlow/Operators/: Basic.swift  LinearAlgebra.swift  Math.swift
Sources/x10/xla_client/: BUILD  async_task.h  computation_client.cc  computation_client.h  debug_macros.h  device.cc  device.h  env_vars.cc  fake_computation_client.cc  fake_computation_client.h  local_device.cc  local_device.h  mesh_service.cc  mesh_service.h  metrics.cc  metrics.h  metrics_reader.cc  multi_wait.cc  multi_wait.h  nccl_distributed.cc  nccl_distributed.h  openxla_compat.h  pjrt_computation_client.cc  pjrt_computation_client.h  sys_util.cc  sys_util.h  tf_compat.h  tf_logging.cc  tf_logging.h  thread_pool.cc  triggered_task.cc  types.h  unique.h  util.cc  util.h  xla_util.cc  xla_util.h  xrt_computation_client.cc  xrt_computation_client.h  xrt_local_service.cc  (+5 more)
Sources/x10/xla_tensor/: BUILD  batch_norm.cpp  batch_norm.h  computation.cpp  ir.h  (+57 more)
Tests/X10Tests/: X10Tests.swift
docs/: OPENXLA_MIGRATION.md
scripts/: find_pjrt_plugin.py  setup_spm.py  x10.pc.in
(+30 files in other folders)
